# B-Spline-curve-fitting

./: .gitignore  CMakeLists.txt  License  README.md
assets/shaders/: controlPts.fs  controlPts.fs.glsl  controlPts.vs.glsl  curve.fs  curve.fs.glsl  curve.vs.glsl  points.fs.glsl
include/: Approximation.hpp  Curve.hpp  CurveRender.hpp  Interpolation.hpp  Shader.hpp
src/: Approximation.cpp  Curve.cpp  CurveRender.cpp  Interpolation.cpp  main.cpp
